2018-11-07  Andreas Schwab  <schwab@suse.de>

	[BZ #23864]
	* sysdeps/unix/sysv/linux/riscv/kernel-features.h
	(__ASSUME_SET_ROBUST_LIST) [__LINUX_KERNEL_VERSION < 0x041400]:
	Undef.

2018-11-06  Joseph Myers  <joseph@codesourcery.com>

	[BZ #23862]
	* sysdeps/unix/sysv/linux/sh/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x040800] (__ASSUME_EXECVEAT): Undefine.
	[__LINUX_KERNEL_VERSION < 0x040800] (__ASSUME_MLOCK2): Likewise.
	[__LINUX_KERNEL_VERSION < 0x040800] (__ASSUME_COPY_FILE_RANGE):
	Likewise.

2018-11-06  Florian Weimer  <fweimer@redhat.com>

	[BZ #17405]
	* posix/Makefile (routines): Add spawn_faction_addchdir.
	(tests): Add tst-spawn-chdir.
	* posix/Versions (GLIBC_2.29): Add
	posix_spawn_file_actions_addchdir_np.
	* posix/spawn_faction_addchdir.c: New file.
	* posix/spawn_faction_destroy.c
	(__posix_spawn_file_actions_destroy): Handle spawn_do_chdir.
	* posix/spawn.h (posix_spawn_file_actions_addchdir_np): Declare.
	* posix/spawn_int.h (struct __spawn_action): Add spawn_do_chdir,
	chdir_action.
	* posix/tst-spawn-chdir.c: New file.
	* sysdeps/posix/spawni.c (__spawni_child): Handle spawn_do_chdir.
	* sysdeps/unix/sysv/linux/spawni.c (__spawni_child): Likewise.
	* sysdeps/mach/hurd/i386/libc.abilist (GLIBC_2.29): Add
	posix_spawn_file_actions_addchdir_np.
	* sysdeps/unix/sysv/linux/aarch64/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/alpha/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/arm/libc.abilist (GLIBC_2.29): Likewise.
	* sysdeps/unix/sysv/linux/hppa/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/i386/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/ia64/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/m68k/coldfire/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/m68k/m680x0/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/microblaze/libc.abilist (GLIBC_2.29):
	Likewise.
	* sysdeps/unix/sysv/linux/mips/mips32/fpu/libc.abilist